input[type=color]: Fix a regression that suggested colors were broken if OPTION's labels were not #rrggbb.

crrev.com/525311 caused this regression.  ColorChooserPopupUIController
should pass color strings to the popup UI code, instead of label
strings.

Bug: 849130
Change-Id: I2da1e2c032c1b0dba8fbffd4ded2a24b5c6dc0f6
Reviewed-on: https://chromium-review.googlesource.com/1084148
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564001}
Former-commit-id: 0d40a90a349b6e4dbe843aedadc78c82fce063d8